@@ -1,4 +1,4 @@
-# @(#)$Ident: Build.PL 2013-12-06 13:54 pjf ;
+# @(#)$Ident: Build.PL 2014-01-05 02:15 pjf ;
 
 use strict;
 use warnings;
@@ -10,12 +10,20 @@ sub whimper { print {*STDOUT} $_[ 0 ]."\n"; exit 0 }
 my $perl_ver = ##{ $meta2{prereqs}->{runtime}->{requires}->{perl} ##};
 my $name     = '##{ $zilla->name ##}'; $name =~ s{ - }{::}gmx;
 my $prereqs  = {
-##{ $plugin->get_prereqs( 1 ) ##} };
+##{ $plugin->get_prereqs( 1 ) ##}
+};
 my $osname   = lc $^O; ($osname eq 'mswin32' or $osname eq 'cygwin')
    and delete $prereqs->{requires}->{ 'IPC::ShareLite' };
 
-$] >= $perl_ver or $ENV{PERL5_CPANPLUS_IS_VERSION}
-   or whimper "Minimum required Perl version is ${perl_ver}";
+if ($] < $perl_ver) {
+   $ENV{AUTOMATED_TESTING}
+      or $ENV{PERL_CPAN_REPORTER_CONFIG}
+      or $ENV{PERL5_CPANPLUS_IS_VERSION}
+      or whimper "Minimum required Perl version is ${perl_ver}";
+   $prereqs->{build_requires} = { %{ $prereqs->{configure_requires} } };
+   $prereqs->{build_requires}->{ 'Test::Requires' } = 0.06;
+   delete $prereqs->{requires};
+}
 
 Module::Build->new(
   'module_name' => $name,
